add:analytics module enhanced